[workspace]
members = ["r4g_base", "r4g_app"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
r4g_base = { path = "r4g_base" }

[profile.dev]
debug = 1

[profile.release]
lto = "thin"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
